--- a/manifest.json
+++ b/manifest.json
@@ -803,10 +803,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/pdf/transact-components.pdf",
+      "source_relative_path": "home/pdf/transact components.pdf",
       "output": {
         "resource": {
-          "relative_path": "home/pdf/transact-components.pdf"
+          "relative_path": "home/pdf/transact components.pdf"
         }
       },
       "is_incremental": false,
@@ -6504,6 +6504,11 @@
         "incrementalPhase": "build"
       },
       "processors": {
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
@@ -6520,11 +6525,6 @@
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
