--- a/manifest.json
+++ b/manifest.json
@@ -6125,6 +6125,18 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "home/techguides/release-info-2020-internal.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/release-info-2020-internal.html",
+          "hash": "yUF7Aatq/Mvia/QiqbLerA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "home/techguides/release-info-2020.md",
       "output": {
         ".html": {
