--- a/manifest.json
+++ b/manifest.json
@@ -803,6 +803,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/pdf/transact-components.pdf",
+      "output": {
+        "resource": {
+          "relative_path": "home/pdf/transact-components.pdf"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/pdf/wealthsuite-components.pdf",
       "output": {
         "resource": {
