--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -38,6 +38,9 @@
          href: http://documentation.temenos.cloud/home/pdf/transact-components.pdf 
        - name: WealthSuite Templates Overview
          href: http://documentation.temenos.cloud/home/pdf/wealthsuite-components.pdf 
+       - name: Selenium Template overview
+         href: http://documentation.temenos.cloud/home/techguides/selenium-template.html 
+         
    - name: Tutorials
      href: ./tutorials-extend.md
      items:
