updated the page and toc

--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -67,8 +67,8 @@
      href: ./techguides/components-products.md
    - name: Manage Factories
      href: ./techguides/factories.md
-   - name: Manage Factory Migrations
-     href: ./techguides/factory-migration.md          
+   - name: Manage Test Scripts
+     href: ./techguides/manage-test-scripts.md          
    - name: Manage Test Cases Upload
      href: ./techguides/stage-testcases.md
    - name: Run a Factory with "Run Now" Button and Dashboard
